# ocaml-gurobi

./: Makefile  README.md  _oasis  _tags  dune  dune-project  gurobi.opam  myocamlbuild.ml  setup.ml  test.lp
bindings/: bindings.ml  dune
config/: discover.ml  dune
example/: dune  example.ml
lib/: c.mli  dune  gurobi.ml
src/grbc/: c.ml  c.mli  c_stubs.c  dune  libtests_c_stubs.clib  test.ml
stubgen/: bindings_c_gen.ml  dune  stubgen.ml
utils/: enum_util.ml  err_enums.txt
