(library
  (name gurobi)
  (public_name gurobi)
  (libraries ctypes gurobi.bindings)
  (foreign_stubs
    (language c)
    (flags :standard -g -Wall -Wextra -Wno-unused-parameter)
    (names gurobi_stubs)
  )
  (c_library_flags -lgurobi120)
)

(rule
  (targets gurobi_types.ml)
  (deps gurobi_types_gen.exe)
  (action (with-stdout-to %{targets} (run %{deps}))))

(rule
 (targets gurobi_types_gen.c gurobi_generated.ml gurobi_stubs.c)
 (deps (:stubgen ../stubgen/stubgen.exe))
 (action (run %{stubgen})))

(rule
 (targets gurobi_types_gen.exe)
 (deps gurobi_types_gen.c)
 (action
  (bash
   "%{cc} %{deps} -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` -I %{ocaml_where} -o %{targets}"))
)
